# bpython

./: .gitignore  .hgignore  .pycheckrc  .readthedocs.yaml  .travis.install.sh  .travis.script.sh  .travis.yml  AUTHORS  AUTHORS.rst  CHANGELOG  CHANGELOG.rst  CHECKLIST  CONTRIBUTING.md  LICENSE  MANIFEST  MANIFEST.in  PR for the contribution for bpython  README  README.md  README.rst  ROADMAP  TODO  Windows_Support.txt  bpython.py  foo.py  hgdistver.py  importtest.py  light.theme  pyproject.toml  requirements.txt  run_tests.py  sample-config  sample-rc  sample.ini  sample.theme  setup.cfg  setup.py  test.py  test.txt  tester.py  (+2 more)
.github/workflows/: build.yaml  lint.yaml
bpdb/: __init__.py  __main__.py  debugger.py
bpython/: __init__.py  __main__.py  _internal.py  _py3compat.py  _typing_compat.py  args.py  autocomplete.py  cli.py  clipboard.py  config.py  curtsies.py  debugger.py  filelock.py  formatter.py  gtk_.py  history.py  importcompletion.py  inspection.py  internal.py  keys.py  lazyre.py  line.py  pager.py  paste.py  patch_linecache.py  repl.py  sample-config  scroll.py  simpleeval.py  simplerepl.py  translations.py  urwid.py  wizard.py
bpython/curtsiesfrontend/: __init__.py  _internal.py  beeper.py  coderunner.py  events.py  filewatch.py  friendly.py  interaction.py  interpreter.py  line.py  manual_readline.py  parse.py  preprocess.py  repl.py  replpainter.py  sitefix.py
bpython/frontends/curtsies/: interaction.py  repl.py
bpython/scrollfrontend/: abbreviate.py  coderunner.py  interaction.py  manual_readline.py  repl.py  replpainter.py  sitefix.py
bpython/test/: __init__.py  test.config  test_abbreviate.py  test_args.py  test_autocomplete.py  test_brackets_completion.py  test_config.py  test_crashers.py  test_curtsies.py  test_curtsies_coderunner.py  test_curtsies_painting.py  test_curtsies_parser.py  test_curtsies_repl.py  test_filewatch.py  test_history.py  test_import_not_cyclical.py  test_importcompletion.py  test_inspection.py  test_interpreter.py  test_keys.py  test_line_properties.py  test_manual_readline.py  test_preprocess.py  test_repl.py  test_simpleeval.py  test_sitefix.py
bpython/test/fodder/: encoding_ascii.py  encoding_latin1.py  encoding_utf8.py  original.py  processed.py
bpython/translations/: __init__.py  bpython.pot
bpython/translations/de/LC_MESSAGES/: bpython.po
bpython/translations/es_ES/LC_MESSAGES/: bpython.po
bpython/translations/fr_FR/LC_MESSAGES/: bpython.po
bpython/translations/it_IT/LC_MESSAGES/: bpython.po
bpython/translations/nl_NL/LC_MESSAGES/: bpython.po
data/: bpython  bpython-curtsies  bpython-gtk  bpython-scroll  bpython-urwid  bpython.appdata.xml  bpython.desktop  org.bpython-interpreter.bpython.appdata.xml
doc/: bpython-config.5  bpython.1  bpython.ini.5  bpythonrc.5
doc/sphinx/: Makefile
doc/sphinx/source/: authors.rst  bpaste.rst  bpdb.rst  changelog.rst  community.rst  conf.py  configuration-options.rst  configuration.rst  contributing.rst  django.rst  index.rst  man-bpython-config.rst  man-bpython.rst  releases.rst  simplerepl.py  simplerepl.rst  sourcecode.rst  themes.rst  tips.rst  windows.rst
gh-pages/: index.html  stylesheet.css
i18n/: README
i18n/it_IT/LC_MESSAGES/: bpython.po
i18n/locale/es_ES/LC_MESSAGES/: bpython.po
i18n/locale/it_IT/LC_MESSAGES/: bpython.po
importtestfolder/Left/: toRight
importtestfolder/Level0/Level1/Level2/: Level3
importtestfolder/Right/: toLeft
stubs/: blessings.pyi  cwcwidth.pyi  greenlet.pyi  msvcrt.pyi  pyperclip.pyi  rlcompleter.pyi  xdg.pyi
stubs/watchdog/: events.pyi  observers.pyi
theme/: light.theme  sample.theme  windows.theme
