[build-system]
requires = [
  "setuptools >= 43",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 80
target_version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | venv
  | _build
  | buck-out
  | build
  | dist
  | bpython/test/fodder
  | doc
)/
'''
