[build-system]
requires = ["setuptools >= 62.4.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 80
target_version = ["py39"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | venv
  | _build
  | buck-out
  | build
  | dist
  | bpython/test/fodder
  | doc
)/
'''
