[metadata]
name = bpython
long_description = file: README.rst
license = MIT
license_file = LICENSE
url = https://www.bpython-interpreter.org/
project_urls =
    GitHub = https://github.com/bpython/bpython
    Documentation = https://doc.bpython-interpreter.org
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6
packages =
    bpython
    bpython.curtsiesfrontend
    bpython.test
    bpython.test.fodder
    bpython.translations
    bpdb
install_requires =
    pygments
    requests
    curtsies >=0.3.5
    greenlet
    cwcwidth
    pyxdg

[options.extras_require]
urwid = urwid
watch = watchdog
jedi = jedi >= 0.16

[options.entry_points]
console_scripts =
    bpython = bpython.curtsies:main
    bpython-curses = bpython.cli:main
    bpython-urwid = bpython.urwid:main [urwid]
    bpdb = bpdb:main

[init_catalog]
domain = bpython
input_file = bpython/translations/bpython.pot
output_dir = bpython/translations

[compile_catalog]
domain = bpython
directory = bpython/translations
use_fuzzy = true

[update_catalog]
domain = bpython
input_file = bpython/translations/bpython.pot
output_dir = bpython/translations

[extract_messages]
output_file = bpython/translations/bpython.pot
msgid_bugs_address = https://github.com/bpython/bpython/issues

[build_sphinx_man]
builder = man
source_dir = doc/sphinx/source
build_dir = build
