[metadata]
name = bpython
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_files = LICENSE
author = Bob Farrell, Andreas Stuehrk, Sebastian Ramacher, Thomas Ballinger, et al.
author_email = bpython@googlegroups.com
url = https://www.bpython-interpreter.org/
project_urls =
    GitHub = https://github.com/bpython/bpython
    Documentation = https://docs.bpython-interpreter.org
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.8
packages =
    bpython
    bpython.curtsiesfrontend
    bpython.test
    bpython.test.fodder
    bpython.translations
    bpdb
install_requires =
    curtsies >=0.4.0
    cwcwidth
    greenlet
    pygments
    pyxdg
    requests

[options.extras_require]
clipboard = pyperclip
jedi = jedi >= 0.16
urwid = urwid
watch = watchdog

[options.entry_points]
console_scripts =
    bpython = bpython.curtsies:main
    bpython-urwid = bpython.urwid:main [urwid]
    bpdb = bpdb:main

[init_catalog]
domain = bpython
input_file = bpython/translations/bpython.pot
output_dir = bpython/translations

[compile_catalog]
domain = bpython
directory = bpython/translations
use_fuzzy = true

[update_catalog]
domain = bpython
input_file = bpython/translations/bpython.pot
output_dir = bpython/translations

[extract_messages]
output_file = bpython/translations/bpython.pot
msgid_bugs_address = https://github.com/bpython/bpython/issues

[build_sphinx_man]
builder = man
source_dir = doc/sphinx/source
build_dir = build

[mypy]
warn_return_any = True
warn_unused_configs = True
mypy_path=stubs
files=bpython

[mypy-jedi]
ignore_missing_imports = True

[mypy-urwid]
ignore_missing_imports = True

[mypy-twisted.*]
ignore_missing_imports = True
